--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 *{
   box-sizing:border-box;
+  font-family: Sans-Serif;
   text-decoration: none;
 }
 
 body{
-  background-color: silver;
+  background-color: lavender;
 }
 
 .wrapper{
@@ -12,6 +13,7 @@ body{
   margin-bottom: 100px;
   margin-right: 300px;
   margin-left: 300px;
+  width: 60%;
 }
 
 .headerbody{  
@@ -29,63 +31,66 @@ body{
   z-index:1;
 }
 
-.sidenavcontainer{
-  position:absolute;
-  height:18%;
-  width:auto;
-  top:7%;
-  right: 0px;
-  z-index: 1;
-  margin-right: 10px;
-  border:1px solid red;
-}
-
 .sidenavcontainer ul{
+  position: absolute;
+  right: 0px;
+  top:5%;
+  margin: 6px;
   list-style-type: none;
-  display: block;
-  margin:;
-  padding: 
-  overflow:hidden;
-  font-size: 10px;
-}
-
-.sidenav li{
-  background:url('images/nav-separator.png') no-repeat right;
-  float: left;
-  display: inline;
-}
-
-.sidenav li a{
-  float: left;
-  width:auto;
   text-align: center;
-  display: block;
-  color: black;
-  padding-right:10px;
-  padding-left: 10px;
+  font-size:10px;
+  height:100%;
+  font-style: Sans-Serif;
+  z-index: 1;
+}
+
+.sidenavcontainer li{
+  padding: 1px 7px 1px 7px;
+  display: inline;
+  background:url('images/nav-separator.png') no-repeat right;
+  float:left;
+}
+
+.sidenavcontainer li a{
+  display: block;}
+
+.sidenavcontainer li a:hover{
+  background-color: none;
 }
 
 .topnavcontainer{
   position: absolute;
   width: 100%;
-  height:39%;
   top:45%;
-  z-index: 1;
-  border:1px solid pink;
-  font-size: 11px;
   display: block;
   font-color: black;
 }
 
-
-.topnavcontainer ul li{
-  text-align: center;
-  color:black;
+.topnavcontainer ul{
+  list-style-type: none;
+  position: absolute;
+  margin:0;
+  padding: 0;
+  top: 45%;
+  height: 200%
+  padding-left: 3px;
+  z-index: 1;
 }
 
 .topnavcontainer li{
-  background:url('images/nav-separator.png') no-repeat top right;
+  background:url('images/nav-separator.png') no-repeat right;
   float: left;
+  font-size: 12px;
+}
+
+.topnavcontainer li a{
+  display: block;
+  color:black;
+  font-style: Sans-Serif;
+  font-color: black;
+  text-align: center;
+  padding: 4px;
+  text-decoration: none;
 }
 
 .topnavcontainer li a:hover {
@@ -112,7 +117,6 @@ body{
 .navcontainer {
   position: absolute;
   width: 100%;
-  border:1px solid black;
 }
 
 .bottom-nav{
@@ -139,7 +143,7 @@ body{
   position:relative;
   background-color: white;
   max-width: 100%;
-  height:500px;
+  height:450px;
   border-radius: 5px;
 }
 
@@ -169,32 +173,32 @@ body{
 }
 
 .upperbox{
+    position: relative;
   box-sizing: border-box;
-  padding:6px;
+  padding:4px;
   max-width: 100%;
-  height:auto;
+  max-height: 50%;
   margin: 1px;
-  position: relative;
-  border:1px solid black;
 }
 
 .belowbox{
   box-sizing:border-box;
   position:relative; 
+  float:left;
   padding-left:2px;
   background-color: white;
   max-width: 100%;
-  margin:1px;
-  height:auto;
+  margin:8px;
+  height:280px;
   overflow: hidden;
 }
+
 
 .canada{ 
   float: left;
   position: relative;
   box-sizing:border-box;
   overflow: hidden; 
-  border:1px solid ;
   margin: 1px;
   max-width:49%;
   position: absolute; 
@@ -211,4 +215,41 @@ body{
   max-width:49%;
 }
 
+.lastnav ul{
+  display: block;
+  font-color: black;
+  list-style-type: none;
+  text-align: center;
+  height: 200%
+  padding-left: 3px;
+}
 
+.lastnav li{
+  font-size: 11px;
+  padding: 0px 4px 0px 4px;
+  background:url('images/nav-separator.png') no-repeat right;
+  float: left;
+}
+
+.lastnav li a{
+  color:black;
+}
+
+.lastnav li a:hover {
+  background-color: none;
+}
+
+.button {
+  box-sizing: border-box;
+  background-color: cyan;
+  border: none;
+  width:35%;
+  height: 25px;
+  color: black;
+  text-align: left;
+  text-decoration: none;
+  font-size: 12px;
+  cursor: pointer;
+  border-radius: 4px;
+  padding-left: 4px;
+}
